--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Vanilla Boilerplate</title>
 
 	  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://npmcdn.com/moralis@0.0.6/dist/moralis.js"></script>
+    <script src="https://npmcdn.com/moralis@latest/dist/moralis.js"></script>
   </head>
 
   <body>
@@ -31,8 +31,8 @@
 
     <script>
       // connect to Moralis server
-      Moralis.initialize("O2gN8tmm4fMDlUqaHcZ5zmskUGOlfdQL6EDhQULT");
-      Moralis.serverURL = "https://pcazywqrum6f.moralisweb3.com:2053/server";
+      Moralis.initialize("APP ID");
+      Moralis.serverURL = "SERVER URL";
 
       // add from here down
       async function login() {
