--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Vanilla Boilerplate</title>
 
 	  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://npmcdn.com/moralis@latest/dist/moralis.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
   </head>
 
   <body>
